# uniprot_etl

./: .gitignore  Cargo.toml  FLAMEGRAPH_INSTRUCTIONS.md  README.md  config.yaml  config.yaml.example  justfile  outline.md  profile.sh  test_config.yaml
benches/: flamegraph_benchmark.rs  throughput.rs
data/: README.md
docs/: flamegraph.md
docs/adr/: 0001-rust-memory-safety.md  0002-streaming-xml-quick-xml.md  0003-producer-consumer-crossbeam.md  0004-nested-parquet-schema.md  0005-execution-ledger.md  0006-nomenclature-structural-hooks.md  0007-isoform-scoped-vsp-mapping.md  0008-ptm-mapping-biological-ceiling.md  0009-enriched-feature-columns.md  0010-modular-pipelined-architecture.md  template.md
runs/run_20251218_041443/: report.yaml
runs/run_20251218_043351/: config_snapshot.yaml  report.yaml
runs/run_20251218_043643/: config_snapshot.yaml  report.yaml
runs/run_20251218_043653/: config_snapshot.yaml  report.yaml
runs/run_20251218_043810/: config_snapshot.yaml  report.yaml
scripts/: clean_data.sh  fetch_uniprot.sh  profile_flamegraph.sh  profile_pipeline_flamegraph.sh  profile_sample.sh
src/: cli.rs  config.rs  error.rs  fasta.rs  lib.rs  main.rs  metrics.rs  report.rs  runs.rs  sampler.rs  schema.rs
src/pipeline/: batcher.rs  builders.rs  mapper.rs  mod.rs  parser.rs  reader.rs  scratch.rs  state.rs  transformer.rs
src/pipeline/builders/: common.rs  mod.rs  ptm.rs
src/pipeline/handlers/: comments.rs  features.rs  mod.rs  (+1 more)
src/writer/: parquet.rs
tests/: biological_validation.rs  pipeline_nomenclature.rs  pipeline_parse.rs  pipeline_smoke.rs
